--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-native": "0.64.3",
     "react-native-web": "0.17.1",
     "expo-constants": "~13.0.2",
+    "react-native-svg": "12.1.1",
     "expo-radio-button": "*",
     "@expo/vector-icons": "^12.0.0",
     "react-native-paper": "4.9.2",
     "react-native-screens": "~3.10.1",
     "react-native-elements": "*",
+    "react-native-chart-kit": "*",
     "@react-navigation/stack": "*",
     "@react-navigation/native": "*",
     "react-native-gesture-handler": "~2.1.0",
